shopping cart validation

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </div>
 
         <div x-show="showHistoricalOrdersButton" class="flex justify-center">
-            <button @click="toggleHistoricalOrders" class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-700">Show Historical Orders</button>
+            <button @click="toggleHistoricalOrders" class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-700">Show Receipt</button>
         </div>
 
         <div x-show="showHistoricalOrders" class="mt-4">
-            <h2 class="text-xl font-semibold mb-2 flex justify-center">Historical Orders</h2>
+            <h2 class="text-xl font-semibold mb-2 flex justify-center">Historical Order</h2>
             <div class="overflow-x-auto">
                 <table class="min-w-full bg-white border border-gray-200">
                     <thead>
